2nd commit Homework25
Fixed errors in Homework 25